# MyAgent

./: .gitignore  CMakeLists.txt  README.md  main.c
.devcontainer/: Dockerfile  devcontainer.json
myagent/: CMakeLists.txt
myagent/include/: AgentError.h  AgentService.h  SSHAgentMessage.h
myagent/src/: AgentError.c  AgentService.c
